--- a/pkg/TODO
+++ b/pkg/TODO
@@ -1,7 +1,6 @@
-2.4		HemoglobinHighAltitude.csv
-2.5a	GuppyAttractiveness.csv
-2.5b	LynxPopulationCycles.csv
-2.6		EndangeredSpecies.csv
+Fig. 2.4-2
+
+2q6		EndangeredSpecies.csv
 2.10	ShuttleDisaster.csv
 2.16	CriminalConvictions.csv
 2.17	ConvictionsAndIncome.csv
@@ -143,3 +142,6 @@ DONE
 2.1b	DesertBirds.csv
 2.1c	SockeyeFemaleBodyMass.csv
 2.3		GreatTitMalaria.csv
+2.4		HemoglobinHighAltitude.csv
+2.5a	GuppyAttractiveness.csv
+2.5b	LynxPopulationCycles.csv
