--- a/pkg/TODO
+++ b/pkg/TODO
@@ -1,133 +1,29 @@
-Fig. 2.4-2
+Implement a manual viewer:
+	function () 
+	{
+	    viewer <- getOption("pdfviewer")
+	    file <- system.file("doc/Sleuth2-manual.pdf", package = "Sleuth2")
+	    system(paste(viewer, file, sep = " "))
+	    invisible()
+	}
 
-AntillesImmigrationDates.csv
-AspirinCancer.csv
-BeeGeneExpression.csv
-BeeLifespans.csv
-BeetleWingsAndHorns.csv
-BirdSexRatio.csv
-BlackbirdTestosterone.csv
-BodyFatHeatLoss.csv
-BrookTrout.csv
-Cavalry.csv
-ChickadeeAlarmsCalls.csv
-ChimpBrains.csv
-Cichlids.csv
-CichlidsGnRH.csv
-Clearcuts.csv
-CocaineHighCollinsBell.csv
-CocaineHighVolkowEtal.csv
-CricketImmunitySpermViability.csv
-DEETMosquiteBites.csv
-DaphniaParasiteLongevity.csv
-DaphniaResistance.csv
-DayOfBirth.csv
-DietBreadthElVerde.csv
-Dioecy.csv
-DisordersAndGeneExpression.csv
-DolphinsClockwise.csv
-DungBeetleCondition.csv
-EarthwormsAndNitrogen.csv
-EarwigForceps.csv
-EelgrassGenotypes.csv
-ElectricFish.csv
-ExploitedLarvalFish.csv
-FingerRatioCAGRepeats.csv
-FireflyFlash.csv
-FlycatcherPatch.csv
-GlidingSnakeUndulations.csv
-GodwitArrivalDates.csv
-GrasslandNutrientsPlantSpecies.csv
-GreenSpaceBiodiversity.csv
-HippocampusLesions.csv
-HornedLizards.csv
-HumanGeneLengths.csv
-Hurricanes.csv
-HybridPollenSterility.csv
-HypoxanthineTimeOfDeath.csv
-Iguanas.csv
-InbreedingWolves.csv
-IndianRopeTrick.csv
-IntertidalAlgae.csv
-KenyaFinches.csv
-KneesWhoSayNight.csv
-LanguageGreyMatter.csv
-LefthandednessAndViolence.csv
-LionAges.csv
-Lions.csv
-LiverPreparation.csv
-LizardBite.csv
-LizardSprintSpeed.csv
-Lobsters.csv
-LodgepolePineCones.csv
-LupusProneMice.csv
-MarineReserve.csv
-MassExtinctions.csv
-MoleRatLayabouts.csv
-MonogamousTestes.csv
-Mosquitoes.csv
-MouseEmpathy.csv
-NeanderthalBrainSize.csv
-NematodeLifespan.csv
-Newts.csv
-NoSmokingDay.csv
-NorthSeaCodRecruits.csv
-NuclearTeeth.csv
-NumberGenesRegulated.csv
-NumberOfBoys.csv
-OstrichTemp.csv
-ParasiteBrainWarp.csv
-PenguinTreadmill.csv
-PlantPopulationPersistence.csv
-Powerball.csv
-PrimateMassMetabolicRate.csv
-PrimateWPC.csv
-ProgesteroneExercise.csv
-Pseudoscorpions.csv
-PufferfishMimicry.csv
-RattlesnakeDigestion.csv
-Rigormortis.csv
-SagebrushCrickets.csv
-SalmonColor.csv
-Seedlings.csv
-SexualSelection.csv
-ShadParasites.csv
-ShrinkingSeals.csv
-SilverswordWaitingTimes.csv
-SleepAndPerformance.csv
-SocialSpiderColonies.csv
-SparrowReproductiveSuccess.csv
-SpiderRunningAmputation.csv
-StalkieEyespan.csv
-Stalkies.csv
-SticklebackPlates.csv
-SticklebackPreference.csv
-Sumo.csv
-SyrupSwimming.csv
-TelomeresAndStress.csv
-Temperature.csv
-Tobacco.csv
-TreeSeedlingsAndSunflecks.csv
-TrilliumRecruitment.csv
-Truffles.csv
-TsetseLearning.csv
-VampireBites.csv
-VasopressinVoles.csv
-Vines.csv
-VoleDispersal.csv
-WalkingStickFemurs.csv
-WalkingStickHeads.csv
-WeddellSeals.csv
-WillsPresidents.csv
-WolfTeeth.csv
-WorldCup.csv
-WrasseSexes.csv
-YeastRegulatoryGenes.csv
-ZebraFinchBeaks.csv
-ZebraFinches.csv
-ZooMortality.csv
-ZooplanktonDepredation.csv
-selection.csv
+Fig. 2.4-2
+-------------------------------
+
+03e2	SpiderRunningAmputation.csv
+03e3	SticklebackPlates.csv
+03q04	KenyaFinches.csv
+03q09	Rigormortis.csv
+03q10	NorthSeaCodRecruits.csv
+03q11	VasopressinVoles.csv
+03q12	AntillesImmigrationDates.csv
+03q13	DietBreadthElVerde.csv
+03q18	SparrowReproductiveSuccess.csv
+
+04e1	HumanGeneLengths.csv
+04q06	FireflyFlash.csv
+04q11	NumberGenesRegulated.csv
+
 
 DONE
 -------------------------------
@@ -144,3 +40,4 @@ DONE
 2q17	ConvictionsAndIncome.csv
 2q18	FireflySpermatophoreMass.csv
 2q23	NeotropicalTreePhotosynthesis.csv
+03e1	GlidingSnakeUndulations.csv
