--- a/pkg/TODO
+++ b/pkg/TODO
@@ -88,12 +88,12 @@ X 13q08	Newts.csv
 X 13q13	Dioecy.csv
 X 13q14	Mosquitoes.csv
 X 13q16	ZebraFinches.csv
-13q18	CichlidsGnRH.csv
-13q19	Vines.csv
-13q20	SalmonColor.csv
-13q22	BirdSexRatio.csv
-13q23	Clearcuts.csv
-13q24	ZebraFinchBeaks.csv
+X 13q18	CichlidsGnRH.csv
+X 13q19	Vines.csv
+X 13q20	SalmonColor.csv
+X 13q22	BirdSexRatio.csv
+X 13q23	Clearcuts.csv
+X 13q24	ZebraFinchBeaks.csv
 
 15e1	KneesWhoSayNight.csv
 15e6	WalkingStickFemurs.csv
