Add print.varcomps(). Minor edits to AntillesImigrationDates
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@64 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -1,11 +1,10 @@
 Implement a manual viewer:
-abd.manual <- function () 
-	{
-	    viewer <- getOption("pdfviewer")
-	    file <- system.file("doc/Sleuth2-manual.pdf", package = "Sleuth2")
-	    system(paste(viewer, file, sep = " "))
-	    invisible()
-	}
+abd.manual <- function(){
+  viewer <- getOption("pdfviewer")
+  file <- system.file("doc/abd-manual.pdf", package = "abd")
+  system(paste(viewer, file, sep = " "))
+  invisible()
+}
 
 Fig. 2.4-2
 Fig. 4.3-1
