Massive .Rd updates
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@68 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -118,8 +118,8 @@ X 15q23	LupusProneMice.csv
 X 15q24	LizardSprintSpeed.csv
 
 X 16e1	FingerRatioCAGRepeats.csv
-16e2	InbreedingWolves.csv
-16e5	IndianRopeTrick.csv
+X 16e2	InbreedingWolves.csv
+X 16e5	IndianRopeTrick.csv
 16q03	GodwitArrivalDates
 16q08	EarwigForceps
 16q10	CricketImmunitySpermViability
