--- a/pkg/TODO
+++ b/pkg/TODO
@@ -120,8 +120,8 @@ X 15q24	LizardSprintSpeed.csv
 X 16e1	FingerRatioCAGRepeats.csv
 X 16e2	InbreedingWolves.csv
 X 16e5	IndianRopeTrick.csv
-16q03	GodwitArrivalDates
-16q08	EarwigForceps
+X 16q03	GodwitArrivalDates
+X 16q08	EarwigForceps
 16q10	CricketImmunitySpermViability
 16q11	PufferfishMimicry
 16q12	TelomeresAndStress
@@ -131,15 +131,15 @@ X 16e5	IndianRopeTrick.csv
 16q17	SleepAndPerformance
 16q19	LefthandednessAndViolence
 16q20	TrilliumRecruitment
-16q21	CocaineHighVolkowEtal 1997 replica.csv
-16q22	CocaineHigh Collins & Bell 2004 replica.csv
+16q21	CocaineHighVolkowEtal
+16q22	CocaineHighCollinsBell
 
-17e1	LionAges Whitman et al 2004 replica.csv
-17e3	ChickadeeAlarmsCalls Templeton et al 2005 replica.csv
-17e8	ShrinkingSeals Trites 1996.csv
-17q02	ZooMortality Clubb and Mason 2003 replica.csv
-17q03	ProgesteroneExercise Brutsaert etal 2002 replica.csv
-17q04	BodyFatHeatLoss Sloan and Keatinge 1973 replica.csv
+17e1	LionAges
+17e3	ChickadeeAlarmsCalls
+17e8	ShrinkingSeals
+17q02	ZooMortality
+17q03	ProgesteroneExercise
+17q04	BodyFatHeatLoss
 17q07	HybridPollenSterility Moyle et al 2004 replica.csv
 17q08	RattlesnakeDigestion Tattersall et al 2004 replica.csv
 17q09	LizardBite Lappin and Husak 2005 replica.csv
