Ch 16 Updates Redo of GlidingSnakeUndulations data
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@72 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -122,8 +122,8 @@ X 16e2	InbreedingWolves.csv
 X 16e5	IndianRopeTrick.csv
 X 16q03	GodwitArrivalDates
 X 16q08	EarwigForceps
-16q10	CricketImmunitySpermViability
-16q11	PufferfishMimicry
+X 16q10	CricketImmunity
+X 16q11	PufferfishMimicry
 16q12	TelomeresAndStress
 16q13	LanguageGreyMatter
 16q14	GreenSpaceBiodiversity
