--- a/pkg/TODO
+++ b/pkg/TODO
@@ -47,6 +47,8 @@ X 03q13	DietBreadthElVerde.csv
 X 03q18	SparrowReproductiveSuccess.csv
 
 X 04e1	HumanGeneLengths.csv
+X 04q06	FireflyFlash.csv
+X 04q11	NumberGenesRegulated.csv
 
 X 08e1	DayOfBirth.csv
 X 08e5	NumberOfBoys.csv
