Adding prop.ci()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@83 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -13,12 +13,13 @@ Fig. 8.1-1 ggplot
 Functions
   sign.test()
   ci()
-  Agresti-Coull CI for binomial
+  Wald adjusted prop.ci
 
 Error Checking
   sum.of.products()
   sum.of.squares()
   se() to sem()
+  prop.ci()
 
 -------------------------------
 
