--- a/pkg/TODO
+++ b/pkg/TODO
@@ -12,8 +12,8 @@ Fig. 8.1-1 ggplot
 
 Functions
   sign.test()
-  ci()
   Wald adjusted prop.ci
+  Use odds.ratio() from HH
 
 Error Checking
   sum.of.products()
