Fix to WalkingStick...
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@102 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -19,6 +19,7 @@ Error Checking
   sum.of.products()
   sum.of.squares()
   se() to sem()
+  Fix varcomps to take either Error() or one-way aov
 
 -------------------------------
 
