Cosmetic fixes to TODO
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@109 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -23,107 +23,107 @@ Error Checking
 
 -------------------------------
 
-X 02.1a	TeenDeaths.csv
-X 02.1b	DesertBirds.csv
-X 02.1c	SockeyeFemaleBodyMass.csv
-X 02.3	GreatTitMalaria.csv
-X 02.4	HemoglobinHighAltitude.csv
-X 02.5a	GuppyAttractiveness.csv
-X 02.5b	LynxPopulationCycles.csv
-X 02q6	EndangeredSpecies.csv
-X 02q10	ShuttleDisaster.csv
-X 02q16	CriminalConvictions.csv
-X 02q17	ConvictionsAndIncome.csv
-X 02q18	FireflySpermatophoreMass.csv
-X 02q23	NeotropicalTreePhotosynthesis.csv
+X 02.1a	TeenDeaths
+X 02.1b	DesertBirds
+X 02.1c	SockeyeFemaleBodyMass
+X 02.3	GreatTitMalaria
+X 02.4	HemoglobinHighAltitude
+X 02.5a	GuppyAttractiveness
+X 02.5b	LynxPopulationCycles
+X 02q6	EndangeredSpecies
+X 02q10	ShuttleDisaster
+X 02q16	CriminalConvictions
+X 02q17	ConvictionsAndIncome
+X 02q18	FireflySpermatophoreMass
+X 02q23	NeotropicalTreePhotosynthesis
 
-X 03e1	GlidingSnakeUndulations.csv
-X 03e2	SpiderRunningAmputation.csv
-X 03e3	SticklebackPlates.csv
-X 03q04	KenyaFinches.csv
-X 03q09	Rigormortis.csv
-X 03q10	NorthSeaCodRecruits.csv
-X 03q11	VasopressinVoles.csv
-X 03q12	AntillesImmigrationDates.csv
-X 03q13	DietBreadthElVerde.csv
-X 03q18	SparrowReproductiveSuccess.csv
+X 03e1	GlidingSnakeUndulations
+X 03e2	SpiderRunningAmputation
+X 03e3	SticklebackPlates
+X 03q04	KenyaFinches
+X 03q09	Rigormortis
+X 03q10	NorthSeaCodRecruits
+X 03q11	VasopressinVoles
+X 03q12	AntillesImmigrationDates
+X 03q13	DietBreadthElVerde
+X 03q18	SparrowReproductiveSuccess
 
-X 04e1	HumanGeneLengths.csv
-X 04q06	FireflyFlash.csv
-X 04q11	NumberGenesRegulated.csv
+X 04e1	HumanGeneLengths
+X 04q06	FireflyFlash
+X 04q11	NumberGenesRegulated
 
-X 08e1	DayOfBirth.csv
-X 08e5	NumberOfBoys.csv
-X 08e6	MassExtinctions.csv
-X 08q02	Powerball.csv
-X 08q03	ShadParasites.csv
-X 08q04	Seedlings.csv
-X 08q05	WorldCup.csv
-X 08q06	Sumo.csv
-X 08q14	Cavalry.csv
-X 08q16	Truffles.csv
-X 08q17	WrasseSexes.csv
-X 08q18	Hurricanes.csv
+X 08e1	DayOfBirth
+X 08e5	NumberOfBoys
+X 08e6	MassExtinctions
+X 08q02	Powerball
+X 08q03	ShadParasites
+X 08q04	Seedlings
+X 08q05	WorldCup
+X 08q06	Sumo
+X 08q14	Cavalry
+X 08q16	Truffles
+X 08q17	WrasseSexes
+X 08q18	Hurricanes
 
-X 09e2	AspirinCancer.csv
-X 09e3	ParasiteBrainWarp.csv
-X 09e4	VampireBites.csv
+X 09e2	AspirinCancer
+X 09e3	ParasiteBrainWarp
+X 09e4	VampireBites
 
-X 11e2	Stalkies.csv
-X 11e3	Temperature.csv
-X 11q02	WolfTeeth.csv
-X 11q10	SyrupSwimming.csv
-X 11q13	DolphinsClockwise.csv
-X 11q14	SticklebackPreference.csv
+X 11e2	Stalkies
+X 11e3	Temperature
+X 11q02	WolfTeeth
+X 11q10	SyrupSwimming
+X 11q13	DolphinsClockwise
+X 11q14	SticklebackPreference
 
-X 12e2	BlackbirdTestosterone.csv
-X 12e3	HornedLizards.csv
-X 12e4	BrookTrout.csv
-X 12q02	NoSmokingDay.csv
-X 12q03	Iguanas.csv
-X 12q05	MonogamousTestes.csv
-X 12q09	Cichlids.csv
-X 12q10	Tobacco.csv
-X 12q11	WillsPresidents.csv
-X 12q13	OstrichTemp.csv
-X 12q15	PrimateWPC.csv
-X 12q16	StalkieEyespan.csv
-X 12q19	ElectricFish.csv
-X 12q23	WeddellSeals.csv
+X 12e2	BlackbirdTestosterone
+X 12e3	HornedLizards
+X 12e4	BrookTrout
+X 12q02	NoSmokingDay
+X 12q03	Iguanas
+X 12q05	MonogamousTestes
+X 12q09	Cichlids
+X 12q10	Tobacco
+X 12q11	WillsPresidents
+X 12q13	OstrichTemp
+X 12q15	PrimateWPC
+X 12q16	StalkieEyespan
+X 12q19	ElectricFish
+X 12q23	WeddellSeals
 
-X 13e1	MarineReserve.csv
-X 13e4	SexualSelection.csv
-X 13e5	SagebrushCrickets.csv
-X 13q05	Lobsters.csv
-X 13q06	Lions.csv
-X 13q08	Newts.csv
-X 13q13	Dioecy.csv
-X 13q14	Mosquitoes.csv
-X 13q16	ZebraFinches.csv
-X 13q18	CichlidsGnRH.csv
-X 13q19	Vines.csv
-X 13q20	SalmonColor.csv
-X 13q22	BirdSexRatio.csv
-X 13q23	Clearcuts.csv
-X 13q24	ZebraFinchBeaks.csv
+X 13e1	MarineReserve
+X 13e4	SexualSelection
+X 13e5	SagebrushCrickets
+X 13q05	Lobsters
+X 13q06	Lions
+X 13q08	Newts
+X 13q13	Dioecy
+X 13q14	Mosquitoes
+X 13q16	ZebraFinches
+X 13q18	CichlidsGnRH
+X 13q19	Vines
+X 13q20	SalmonColor
+X 13q22	BirdSexRatio
+X 13q23	Clearcuts
+X 13q24	ZebraFinchBeaks
 
-X 15e1	KneesWhoSayNight.csv
-X 15e6	WalkingStickFemurs.csv
-X 15q01	PlantPopulationPersistence.csv
-X 15q05	EelgrassGenotypes.csv
-X 15q06	DisordersAndGeneExpression.csv
-X 15q11	DungBeetleCondition.csv
-X 15q13	DaphniaResistance.csv
-X 15q14	TsetseLearning.csv
-X 15q19	NematodeLifespan.csv
-X 15q21	WalkingStickHeads.csv
-X 15q22	LodgepolePineCones.csv
-X 15q23	LupusProneMice.csv
-X 15q24	LizardSprintSpeed.csv
+X 15e1	KneesWhoSayNight
+X 15e6	WalkingStickFemurs
+X 15q01	PlantPopulationPersistence
+X 15q05	EelgrassGenotypes
+X 15q06	DisordersAndGeneExpression
+X 15q11	DungBeetleCondition
+X 15q13	DaphniaResistance
+X 15q14	TsetseLearning
+X 15q19	NematodeLifespan
+X 15q21	WalkingStickHeads
+X 15q22	LodgepolePineCones
+X 15q23	LupusProneMice
+X 15q24	LizardSprintSpeed
 
-X 16e1	FingerRatioCAGRepeats.csv
-X 16e2	InbreedingWolves.csv
-X 16e5	IndianRopeTrick.csv
+X 16e1	FingerRatioCAGRepeats
+X 16e2	InbreedingWolves
+X 16e5	IndianRopeTrick
 X 16q03	GodwitArrivalDates
 X 16q08	EarwigForceps
 X 16q10	CricketImmunity
