Add interval(), interval.htest() Change conf.int to conf.level globally
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/abd@113 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -13,7 +13,7 @@ Fig. 8.1-1 ggplot
 Functions
   sign.test()
   Wald adjusted prop.ci
-  Use odds.ratio() from HH
+  Use odds.ratio() from HH; write print method
 
 Error Checking
   sum.of.products()
